Adds list styles and comment cleanup

--- a/index.html
+++ b/index.html
@@ -28,39 +28,15 @@ cta_text="Learn More"
 cta_url="#features"
 %}
 
+<!-- Section- Features -->
+{% include section-centered.html
+bg_class="bg-dark"
+heading="What We Offer"
+subheading="Build Your Digital Home"
+list="Establish a strong, welcoming digital presence|Reach and engage their audience through thoughtful strategy|Navigate tech with confidence—no matter their experience level|Find the right tools that match their needs, values, and budget"
+%}
 
-<section>
-  <div class="container-full-width">
-    <div class="bento-grid bento-grid--feature reverse">
-      <div class="bento-section">
-        <img
-          src="/assets/images/pages/home/community2.jpg"
-          alt="Community Partnerships"
-          class="bento-image" />
-      </div>
-      <div class="bento-section bento-grid">
-        {% include heading.html
-        heading="Our Mission"
-        small=true
-        %}
-        <div class="about-content">
-          <p class="intro">
-            Rize Digital is a community-first consultancy that helps organizations use technology with confidence and clarity. We believe in digital tools that are accessible, culturally informed, and grounded in real needs—not trends.
-          </p>
 
-          <h4>We are committed to:</h4>
-          <ul class="">
-            <li>Using tech to uplift</li>
-            <li>Empowering people through education</li>
-            <li>Creating inclusive and accessible solutions</li>
-            <li>Supporting nonprofits and underrepresented communities</li>
-            <li>Building long-term relationships with care and accountability</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- Section - Features  -->
 <section class="bg-light">
@@ -99,13 +75,38 @@ cta_url="#features"
   </div>
 </section>
 
-<!-- Section- Features -->
-{% include section-centered.html
-bg_class="bg-red"
-heading="What We Offer"
-subheading="Build Your Digital Home"
-list="Establish a strong, welcoming digital presence|Reach and engage their audience through thoughtful strategy|Navigate tech with confidence—no matter their experience level|Find the right tools that match their needs, values, and budget"
-%}
+<section>
+  <div class="container-full-width">
+    <div class="bento-grid bento-grid--feature reverse">
+      <div class="bento-section">
+        <img
+          src="/assets/images/pages/home/community2.jpg"
+          alt="Community Partnerships"
+          class="bento-image" />
+      </div>
+      <div class="bento-section bento-grid">
+        {% include heading.html
+        heading="Our Mission"
+        small=true
+        %}
+        <div class="about-content">
+          <p class="intro">
+            Rize Digital is a community-first consultancy that helps organizations use technology with confidence and clarity. We believe in digital tools that are accessible, culturally informed, and grounded in real needs—not trends.
+          </p>
+
+          <h4>We are committed to:</h4>
+          <ul class="">
+            <li>Using technology to uplift</li>
+            <li>Empowering people through education</li>
+            <li>Creating inclusive and accessible solutions</li>
+            <li>Supporting nonprofits and underrepresented communities</li>
+            <li>Building long-term relationships with care and accountability</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- CTA -->
 {% include cta.html
