--- a/learn.html
+++ b/learn.html
@@ -70,7 +70,7 @@ cta_url="/contact"
 </section>
 
 {% include section-centered.html
-bg_class="bg-red"
+bg_class="bg-dark"
 heading="Customized for Your Community"
 paragraphs="Every organization is different. That's why we tailor each workshop to fit your audience, goals, and values. Whether you're a grassroots collective, a nonprofit team, or a group of elders and youth, we adapt our content and delivery to meet your needs."
 %}
