adds some form positioning and moves land acknowledgement to the footer

--- a/connect.html
+++ b/connect.html
@@ -16,7 +16,7 @@ subtitle="Have a project in mind or want to explore how we can work together? We
 image="/assets/images/pages/connect/connect.jpg"
 %}
 
-<section class="">
+<section class="form-section">
   {% include contact-form.html %}
 </section>
 
@@ -27,7 +27,7 @@ image="/assets/images/pages/connect/connect.jpg"
 </section>
 
 {% include section-centered.html
-bg_class="bg-red"
+bg_class="bg-dark"
 heading="Our Mission"
 paragraphs="Rize Digital exists to bridge gaps in access, build digital confidence, and support people doing good work in their communities. We believe technology should be inclusive, approachable, and aligned with your values."
 cta_text="Explore AI Together"
@@ -99,24 +99,6 @@ cta_url="/connect"
     </div>
   </div>
 </section>
-<section class="">
-  <div class="bento-container">
-    <div class="bento-grid bento-grid--feature  bg-dark">
-      <div class="bento-section text-container">
-        <h4>Land Acknowledgment</h4>
-        <p class="location">
-          Based in Vancouver, we serve clients across Canada.
-        </p>
-        <p>We are grateful to live and work on the unceded territories of the Musqueam, Squamish, and Tsleil-Waututh Nations.</p>
-      </div>
-      <div class="bento-image-wrapper">
-        <img src="/assets/images/pages/home/land.jpg" class="bento-image circle" />
-      </div>
-    </div>
-  </div>
-</section>
-
-
 
 <!-- CTA Section -->
 {% include cta.html
