Adds some mobile padding fixes

--- a/grow.html
+++ b/grow.html
@@ -26,7 +26,7 @@ paragraphs="Whether you're a nonprofit, collective, or small team—your time an
 
 
 <!-- Section - What We Help You Do -->
-<section>
+<section class="bg-light">
   <div class="container">
     {% include heading.html
     heading="Tools & Strategy"
@@ -51,6 +51,8 @@ paragraphs="Whether you're a nonprofit, collective, or small team—your time an
       image_alt="Digital Tools Setup"
       button_text="Plan Your Outreach"
       button_url="/connect"
+      feature_class="reverse bg-dark"
+
       %}
 
       {% include feature.html
