adds form styles

--- a/connect.html
+++ b/connect.html
@@ -16,8 +16,8 @@ subtitle="Have a project in mind or want to explore how we can work together? We
 image="/assets/images/pages/connect/connect.jpg"
 %}
 
-<section class="form-section">
-  <div class="bg-red ">
+<section class="form-section bg-red">
+  <div class="bg-red">
     <div class="text-container">
       <h2>Let's Build Something Real</h2>
 
