adds bento styling to social

--- a/connect.html
+++ b/connect.html
@@ -23,8 +23,10 @@ image="/assets/images/pages/connect/connect.jpg"
 
       <p>Whether you're ready to start a project, have an idea to explore, or just want to ask a few questions—we'd love to hear from you. We're here to support you with clarity, care, and solutions that fit your goals and values.</p>
 
-      <h3>Follow along, say hello, or reach out anytime</h3>
-      {% include social-links.html %}
+      <div class="social-links-container">
+        <h3>Follow along and reach out anytime</h3>
+        {% include social-links.html %}
+      </div>
     </div>
   </div>
   {% include contact-form.html %}
