connect content looks good

--- a/connect.html
+++ b/connect.html
@@ -19,12 +19,12 @@ image="/assets/images/pages/connect/connect.jpg"
 <section class="form-section bg-red">
   <div class="bg-red">
     <div class="text-container">
-      <h2>Let's Build Something Real</h2>
+      <h2>Build Something Real</h2>
 
       <p>Whether you're ready to start a project, have an idea to explore, or just want to ask a few questions—we'd love to hear from you. We're here to support you with clarity, care, and solutions that fit your goals and values.</p>
 
       <div class="social-links-container">
-        <h3>Follow along and reach out anytime</h3>
+        <h3>Follow along & reach out</h3>
         {% include social-links.html %}
       </div>
     </div>
