grow content is good

--- a/grow.html
+++ b/grow.html
@@ -20,7 +20,7 @@ cta_url="/connect"
 
 {% include section-centered.html
 bg_class="bg-red"
-heading="Work Smarter, Reach Further"
+heading="Reach Further"
 paragraphs="Whether you're a nonprofit, collective, or small team—your time and energy matter. We help you implement the tools and strategies that make your work easier and more impactful."
 %}
 
@@ -33,7 +33,7 @@ paragraphs="Whether you're a nonprofit, collective, or small team—your time an
     %}
     <div class="bento-container">
       {% include feature.html
-      title="Internal Tools That Work For You"
+      title="Internal Tools"
       description="Set up and optimize tools your team will actually use."
       list="Slack, Microsoft Teams, Google Workspace|Project management: Asana, Trello, Jira|Onboarding, documentation, staff training, and more"
       image="/assets/images/pages/grow/strategy1.jpg"
@@ -43,23 +43,12 @@ paragraphs="Whether you're a nonprofit, collective, or small team—your time an
       feature_class="reverse bg-dark"
       %}
 
+
       {% include feature.html
-      title="Strategy to Grow Your Reach"
+      title="Outreach Strategy"
       description="Build an outreach strategy that aligns with your mission and audience."
       list="Email marketing, content planning, SEO|Local visibility (Google Business, maps, directories)|Social media that tells your story"
       image="/assets/images/pages/grow/setup.jpg"
-      image_alt="Digital Tools Setup"
-      button_text="Plan Your Outreach"
-      button_url="/connect"
-      feature_class="reverse bg-dark"
-
-      %}
-
-      {% include feature.html
-      title="Grow Your Reach"
-      description="Build an outreach strategy that aligns with your mission and audience."
-      list="Email marketing, content planning, SEO|Local visibility (Google Business, maps, directories)|Social media that tells your story"
-      image="/assets/images/pages/grow/team-support.jpg"
       image_alt="Team Support and Training"
       button_text="Plan Your Outreach"
       button_url="/connect"
@@ -67,7 +56,7 @@ paragraphs="Whether you're a nonprofit, collective, or small team—your time an
       %}
 
       {% include feature.html
-      title="Fundraising Strategy & Tools"
+      title="Fundraising"
       description="We help nonprofits use digital tools to build trust, tell powerful stories, and strengthen relationships with funders and supporters."
       list="Website and landing pages for funders or campaigns|Email outreach tools (Mailchimp, ConvertKit, Klaviyo)|CRM and donor management support"
       image="/assets/images/pages/grow/grow2.jpg"
@@ -92,7 +81,7 @@ cta_url="/connect"
 <!-- CTA Section -->
 {% include cta.html
 title="Level up your systems"
-text="Let’s make your tools and strategy feel less overwhelming—and more aligned with your goals."
+text="Let's make your tools and strategy feel less overwhelming—and more aligned with your goals."
 button_text="Grow With Us"
 link="/connect?type=build"
 %}
