fixes build page heading and some text

--- a/grow.html
+++ b/grow.html
@@ -80,7 +80,7 @@ cta_url="/connect"
 
 <!-- CTA Section -->
 {% include cta.html
-title="Level up your systems"
+title="Level up"
 text="Let's make your tools and strategy feel less overwhelming—and more aligned with your goals."
 button_text="Grow With Us"
 link="/connect?type=build"
