--- a/connect.html
+++ b/connect.html
@@ -85,7 +85,6 @@ image="/assets/images/pages/connect/connect.jpg"
 <!-- Section Bio -->
 <section class="bg-red">
   <div class="container">
-
     <div class="bento-container">
       {% include feature.html
       title="Your Digital Partner"
@@ -110,7 +109,7 @@ cta_url="/connect"
 
 <!-- CTA Section -->
 {% include cta.html
-title="Start a conversation"
+title="Reach Out"
 text="Have a project in mind? Curious how we might work together? Tell us what you're thinking — we'll follow up with next steps, resources, or a consultation."
 button_text="Start a Conversation"
 link="/connect?type=build"
