adds some color styles to connect page and mobile styles

--- a/connect.html
+++ b/connect.html
@@ -11,7 +11,7 @@ og_image: /assets/images/og-connect.jpg
 
 <!-- Hero -->
 {% include hero.html
-title="Let's Start Something"
+title="Let's Get Started"
 subtitle="Have a project in mind or want to explore how we can work together? We're here to listen, support, and help you take the next steps."
 image="/assets/images/pages/connect/connect.jpg"
 %}
@@ -83,7 +83,7 @@ image="/assets/images/pages/connect/connect.jpg"
 </section>
 
 <!-- Section Bio -->
-<section class="bg-red">
+<section class="bg-dark">
   <div class="container">
     <div class="bento-container">
       {% include feature.html
@@ -92,7 +92,7 @@ image="/assets/images/pages/connect/connect.jpg"
       image="/assets/images/pages/connect/max-harris.jpg"
       image_alt="Max Harris, founder of Rize Digital"
       image_class="circle"
-      feature_class="bg-dark"
+      feature_class="bg-light"
       %}
     </div>
   </div>
@@ -100,11 +100,9 @@ image="/assets/images/pages/connect/connect.jpg"
 
 
 {% include section-centered.html
-bg_class="bg-dark"
+bg_class="bg-light"
 heading="Our Mission"
 paragraphs="Rize Digital exists to bridge gaps in access, build digital confidence, and support people doing good work in their communities. We believe technology should be inclusive, approachable, and aligned with your values."
-cta_text="Explore AI Together"
-cta_url="/connect"
 %}
 
 <!-- CTA Section -->
