--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@ list="Establish a strong, welcoming digital presence|Reach and engage their audi
           <p class="intro">
             Rize Digital is a community-first consultancy that helps organizations use technology with confidence and clarity. We believe in digital tools that are accessible, culturally informed, and grounded in real needs—not trends.
           </p>
-
-          <h4>We are committed to:</h4>
-          <ul class="">
+          <div class="heading-container--sm">
+            <h2>Our commitment</h2>
+          </div>
+          <ul class="bento-list">
             <li>Using technology to uplift</li>
             <li>Empowering people through education</li>
             <li>Creating inclusive and accessible solutions</li>
